<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <LinearLayout
        android:id="@+id/entry_one"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="bottom"
        android:orientation="vertical"
        android:weightSum="3"
        android:padding="5sp"
        android:clickable="true"
        android:visibility="visible" >
        
        <TextView 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/entry_one_name"
            android:textSize="24sp"
            android:textColor="@color/black"
            android:text="@string/village1" 
            android:background="@color/white"
            android:layout_weight="2"
            android:padding="2sp" 
            android:visibility="visible" />
        
        <TextView 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/entry_one_info"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:text="@string/stories1"
            android:background="@color/white"
            android:layout_weight="1"
            android:padding="2sp"
            android:visibility="visible" />
        
    </LinearLayout>
    
    <View android:id="@+id/separator1" 
		android:background="@color/black" 
 		android:layout_width = "fill_parent"
 		android:layout_height="1dp"
 		android:layout_centerVertical ="true"
 		android:layout_alignParentTop="true" />
    
	<LinearLayout
        android:id="@+id/entry_two"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="bottom"
        android:orientation="vertical"
        android:weightSum="3"
        android:padding="5sp"
        android:clickable="true"
        android:visibility="visible" >
        
        <TextView 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/entry_two_name"
            android:textSize="24sp"
            android:textColor="@color/black"
            android:text="@string/village2" 
            android:background="@color/white"
            android:layout_weight="2"
            android:padding="2sp" 
            android:visibility="visible" />
        
        <TextView 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/entry_two_info"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:text="@string/stories2"
            android:background="@color/white"
            android:layout_weight="1"
            android:padding="2sp"
            android:visibility="visible" />
        
    </LinearLayout>
    
	<View android:id="@+id/separator2" 
		android:background="@color/black" 
 		android:layout_width = "fill_parent"
 		android:layout_height="1dp"
 		android:layout_centerVertical ="true"
 		android:layout_alignParentTop="true" />
	
	<LinearLayout
        android:id="@+id/entry_three"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="bottom"
        android:orientation="vertical"
        android:weightSum="3"
        android:padding="5sp"
        android:clickable="true"
        android:visibility="visible" >
    
		<TextView 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/entry_three_name"
            android:textSize="24sp"
            android:textColor="@color/black"
            android:text="@string/village3" 
            android:background="@color/white"
            android:layout_weight="2"
            android:padding="2sp" 
            android:visibility="visible" />
        
        <TextView 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/entry_three_info"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:text="@string/stories3"
            android:background="@color/white"
            android:layout_weight="1"
            android:padding="2sp"
            android:visibility="visible" />
        
    </LinearLayout>
    
	<View android:id="@+id/separator3" 
		android:background="@color/black" 
 		android:layout_width = "fill_parent"
 		android:layout_height="1dp"
 		android:layout_centerVertical ="true"
 		android:layout_alignParentTop="true" />
	
	<LinearLayout
        android:id="@+id/entry_four"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="bottom"
        android:orientation="vertical"
        android:weightSum="3"
        android:padding="5sp"
        android:clickable="true"
        android:visibility="visible" >
        
        <TextView 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/entry_four_name"
            android:textSize="24sp"
            android:textColor="@color/black"
            android:text="@string/village4" 
            android:background="@color/white"
            android:layout_weight="2"
            android:padding="2sp" 
            android:visibility="visible" />
        
        <TextView 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/entry_four_info"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:text="@string/stories4"
            android:background="@color/white"
            android:layout_weight="1"
            android:padding="2sp"
            android:visibility="visible" />
        
    </LinearLayout>

</LinearLayout>
